Fix classes from the Gradle classloader which accidently had ClassInfo removed
+review REVIEW-5606